# metamod-fallguys

./: .cursorignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Config.mak  README.md  README_ASCURL.md  README_ASEXT.md  README_ASQCVAR.md  README_ASUSERMSG.md  README_CMAKE.md  README_FALLGUYS.md  build-all-linux.sh  build-all-win32.bat  build-bullet3-debug.bat  build-bullet3.bat  build-capstone-debug.bat  build-capstone.bat  build-fallguys.bat  build-metamod.bat  bullet3_CMakeLists.txt  capstone_CMakeLists.txt  metamod.sln  xmake.lua
.claude/skills/add-private-function-with-signatures/: SKILL.md
.claude/skills/add-private-function-with-signatures/references/: troubleshooting.md
.claude/skills/create-new-asext-api/: SKILL.md
.claude/skills/create-new-asext-api/references/: import-macro-guide.md
.codex/skills/add-new-asext-api/: SKILL.md
.codex/skills/add-private-function-with-signatures/references/: calling-conventions.md  signature-patterns.md
.codex/skills/add-private-function-with-signatures/scripts/: signature_converter.py
.codex/skills/create-new-asext-api/references/: asext-file-map.md
.github/workflows/: ubuntu.yml  windows.yml
.serena/: project.yml
.serena/memories/: SemiClip.md  SemiRenderEffects.md  add_private_function_with_signatures.md  ascurl.md  asext.md  asqcvar.md  asusermsg.md  code_style_conventions.md  development_guidelines.md  fallguys.md  game_private_funcs_vars.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.serena/memories/fallguys/: SemiClip.md  SemiVisible.md
CDetour/: detourhelpers.h  detours.cpp  detours.h  sp_vm_types.h
CDetour/asm/: asm.c  asm.cpp
CDetour/libudis86/: udis86.c
ascurl/: CMakeLists.txt  Config.mak  Makefile  ascurl.cpp  ascurl.h  ascurl.vcxproj  ascurl.vcxproj.filters  asext_api.h  dllapi.cpp  engine_hook.cpp  fallguys.h  fallguys.vcxproj.filters  meta_api.cpp  server_hook.cpp  signatures.h  xmake.lua
ascurl/opt.linux_i386/: Rules.depend
asext/: CMakeLists.txt  Config.mak  asext.h  asext.vcxproj  asext.vcxproj.filters  dllapi.cpp  engine_api.cpp  meta_api.cpp  server_hook.cpp  serverdef.h  signatures.h  xmake.lua
asext/include/: asext_api.h  sc_std_string.h  std_string.h
asext/opt.linux_i386/: Rules.depend
asqcvar/: CMakeLists.txt  Config.mak  asqcvar.cpp  asqcvar.h  asqcvar.vcxproj  asqcvar.vcxproj.filters  dllapi.cpp  engine_api.cpp  meta_api.cpp  server_hook.cpp  signatures.h  xmake.lua
asqcvar/opt.linux_i386/: Rules.depend
asusermsg/: CMakeLists.txt  Config.mak  asusermsg.cpp  asusermsg.h  asusermsg.vcxproj  asusermsg.vcxproj.filters  dllapi.cpp  engine_api.cpp  engine_hook.cpp  enginedef.h  meta_api.cpp  server_hook.cpp  signatures.h  xmake.lua
asusermsg/opt.linux_i386/: Rules.depend
docs/: README_ASEXT.md  README_ASQCVAR.md  README_CMAKE.md  README_FALLGUYS.md
docs/plans/: 2026-03-12-release-debug-symbols-design.md  2026-03-12-release-debug-symbols.md
fallguys/: CMakeLists.txt  Config.mak  Makefile  asext_api.h  dllapi.cpp  ehandle.h  engine_api.cpp  engine_hook.cpp  enginedef.h  fallguys.cpp  fallguys.h  fallguys.vcxproj  fallguys.vcxproj.filters  meta_api.cpp  mhutil.h  physics.cpp  physics.h  sdk_util.cpp  server_hook.cpp  serverdef.h  signatures.h  soundengine.cpp  soundengine.h  xmake.lua
fallguys/opt.linux_i386/: Rules.depend
glibc_224/: force_link_glibc_2.24.h
hlsdk/common/: com_model.h  r_studioint.h
hlsdk/dlls/: extdll.h  util.h
hlsdk/engine/: eiface.h
hlsdk/pm_shared/: pm_defs.h
metamod/: CMakeLists.txt  Config.mak  Makefile  api_hook.cpp  api_hook.h  api_info.cpp  api_info.h  comp_dep.h  dllapi.cpp  dllapi.h  engine_api.cpp  engine_api.h  engine_t.h  enginecallbacks.h  engineinfo.cpp  engineinfo.h  games.h  h_export.cpp  info_name.h  linkent.h  log_meta.cpp  meta_api.h  meta_eiface.cpp  meta_eiface.h  metamod.cpp  metamod.h  metamod.sln  metamod.vcxproj  metamod.vcxproj.filters  mlist.cpp  mlist.h  mplugin.cpp  mplugin.h  mreg.cpp  mreg.h  mutil.cpp  mutil.h  osdep.cpp  osdep.h  osdep_detect_gamedll_linux.cpp  (+6 more)
metamod/CDetour/jit/: jit_helpers.h
nodlfile/: Config.mak  engine_api.cpp  meta_api.cpp  nodlfile.vcxproj  nodlfile.vcxproj.filters
openssl/include/openssl/: configuration.h  opensslconf.h
plan/: SemiRenderEffects.md
procmap/: .travis.yml  LICENSE  README.md
procmap/src/procmap/: MemorySegment.cpp
querycvar/: Config.mak  dllapi.cpp  meta_api.cpp  querycvar.vcxproj  querycvar.vcxproj.filters  sdk_util.cpp
scripts/: build-all-linux.sh  build-all-opt.linux_i386.sh  build-all-win32.bat  build-all-x86-Release.bat  build-bullet3-dbg.linux_i386.sh  build-bullet3-opt.linux_i386.sh  build-bullet3-x86-Debug.bat  build-bullet3-x86-Debug.sh  build-bullet3-x86-Release.bat  build-capstone-dbg.linux_i386.sh  build-capstone-opt.linux_i386.sh  build-capstone-x86-Debug.bat  build-capstone-x86-Release.bat  build-cmake-opt.linux_i386.sh  build-cmake-x86-Debug.bat  build-make-dbg.linux_i386.sh  build-metamod-cmake-dbg.linux_i386.sh  build-metamod-cmake-opt.linux_i386.sh  build-metamod-cmake-x86-Debug.bat  build-metamod-cmake-x86-Release.bat  build-metamod-make-dbg.linux_i386.sh  build-metamod-make-opt.linux_i386.sh  build-metamod-msvc-x86-Release.bat  build-metamod.bat  build-metamod.sh  build-msvc-x86-Debug.bat  build-plugins.bat  build-procmap-dbg.linux_i386.sh  build-procmap-opt.linux_i386.sh  debug-helper-AIO.bat
tools/: global_common.props  global_template.props
xmake/: packages.lua  requires.lua
xmake/patches/: bullet3.patch  capstone.patch  procmap.patch
